:sparkles: feat: adding lesson service and fixing typos in lesson response and changing reponse in module service